fix: spacing2

--- a/port.css
+++ b/port.css
@@ -289,7 +289,7 @@
     .imgctn{
         /* padding-left: 110px; */
         align-items: center;
-        width: 120px;
+        width: 180px;
         height: 240px;
     }
     .image2 {
